<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="211dp"
        android:layout_height="112dp"
        android:contentDescription="@string/cin_logo"
        android:src="@drawable/logocin" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/red_dark"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/red_dark"
        android:backgroundTint="@color/red_dark"
        android:autofillHints="emailAddress"
        android:textColorHint="@color/red_dark"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/red_dark"
        android:backgroundTint="@color/red_dark"
        android:autofillHints="password"
        android:textColorHint="@color/red_dark"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="@color/red_dark"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:onClick="login"/>
</LinearLayout>