<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="211dp"
        android:layout_height="112dp"
        android:contentDescription="@string/cin_logo"
        android:src="@drawable/logocin" />

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/red_dark"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/buttonIrTelaCalculo"
        android:background="@color/red_dark"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:onClick="irTelaCalculoGasolina"/>


    <TextView
        android:id="@+id/txtDateHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>